--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <img src="o.wang.jpg">
-        
+        <h1>Hi there! I'm Owen</h1>
+        <h2>Welcome to my personal website</h2>
     </body>
 </html>
