--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 
     </head>
     <body>
-        <img src="o.wang.jpg">
+        <img src="o.wang.jpg" alt="Profile Picture" width="256" height="256">
         <h1>Hi there! I'm Owen</h1>
         <h2>Welcome to my personal website</h2>
+        <p>check out my links <a href="https://www.linkedin.com/in/owen-wang587/">here</a></p>
     </body>
 </html>
