--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
         <img src="o.wang.jpg" alt="Profile Picture" width="256" height="256">
         <h1>Hi there! I'm Owen</h1>
         <h2>Welcome to my personal website</h2>
-        <p>check out my links <a href="https://www.linkedin.com/in/owen-wang587/">here</a></p>
+        
+        <p>brief bio here</p>
+        <ul> <!-- implement this list into tabs for audience, list order/content w.i.p.-->
+            <li>About</li>
+            <li>Blog</li>
+            <li>GitHub</li>
+            <li>LinkedIn</li>
+            <li>Resume</li>
+            <li>Projects</li>
+        </ul>
     </body>
 </html>
