--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1>Hi there! I'm Owen</h1>
         <h2>Welcome to my personal website</h2>
         
-        <p>brief bio here</p>
+        <p>[add brief bio here]</p>
         <ul> <!-- implement this list into tabs for audience, list order/content w.i.p.-->
             <li>About</li>
             <li>Blog</li>
