--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <img src="o.wang.jpg" alt="Profile Picture" width="256" height="256">
+        
+        <div class="main">
+            <img class="profile-img" src="o.wang.jpg" alt="Profile Picture">
+        </div>
+
         <h1>Hi there! I'm Owen</h1>
         <h2>Welcome to my personal website</h2>
         
