--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="main">
-            <img class="profile-img" src="o.wang.jpg" alt="Profile Picture">
+            <img class="profile-img" src="o.wang.jpg" alt="Owen's Profile Picture">
             
             <h1>Hi there! I'm Owen</h1>
             <h2>Welcome to my personal website</h2>
