--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <h1>Hi there! I'm Owen</h1>
             <h2>Welcome to my personal website</h2>
             
-            <p>[add brief bio here]</p>
+            <p>simply another soul floating along the river that's called life</p>
             <div class="btn-wrapper">
                 <ul> <!-- implement this list into tabs for audience, list order/content w.i.p.-->
                     <li>About</li>
