--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <h2>Welcome to my personal website</h2>
             
             <p>simply another soul floating along the river that's called life</p>
+            <p>still trying to figure this out, give me a few...</p>
             <div class="btn-wrapper">
                 <ul> <!-- implement this list into tabs for audience, list order/content w.i.p.-->
                     <li>About</li>
