--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
             <p>simply another soul floating along the river that's called life</p>
             <p>still trying to figure this out, give me a few...</p>
             <div class="btn-wrapper">
-                <ul> <!-- implement this list into tabs for audience, list order/content w.i.p.-->
-                    <li>About</li>
-                    <li>Blog</li>
-                    <li>GitHub</li>
-                    <li>LinkedIn</li>
-                    <li>Resume</li>
-                    <li>Projects</li>
-                </ul>
+                <!--
+                    <ul> #implement this list into tabs for audience, list order/content w.i.p.##
+                        <li>About</li>
+                        <li>Blog</li>
+                        <li>GitHub</li>
+                        <li>LinkedIn</li>
+                        <li>Resume</li>
+                        <li>Projects</li>
+                    </ul>
+                -->
             </div>
         </div>
     </body>
