--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             <img class="profile-img" src="o.wang.jpg" alt="Owen's Profile Picture">
             
             <h1>Hi there! I'm Owen</h1>
-            <h2>Welcome to my personal website</h2>
+            <h2>Welcome to my website</h2>
             
             <p>simply another soul floating along the river that's called life</p>
             <p>still trying to figure this out, give me a few...</p>
