--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<head>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <h1>bloggy poggy</h1>
-</body>
+<html>
+    <head>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <h1>bloggy poggy</h1>
+    </body>
+</html>
