--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <p>simply another soul floating along the river that's called life</p>
             <p>still trying to figure this out, give me a few...</p>
             <p>for now, find me on <a href="https://www.linkedin.com/in/owen-wang587/">LinkedIn</a></p>
+            <p>also, check out this <a href="blog.html">blog</a></p>
             <div class="btn-wrapper">
                 <!--
                     <ul> #implement this list into tabs for audience, list order/content w.i.p.##
