--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
-        <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+        <link rel="icon" type="image/png" href="media/favicon-32x32.png" sizes="32x32" />
+        <link rel="icon" type="image/png" href="media/favicon-16x16.png" sizes="16x16" />
 
     </head>
     <body>
         <div class="main">
-            <img class="profile-img" src="o.wang.jpg" alt="Owen's Profile Picture">
+            <img class="profile-img" src="media/o.wang.jpg" alt="Owen's Profile Picture">
             
             <h1>Hi there! I'm Owen</h1>
             <h2>Welcome to my website</h2>
