--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/png" href="media/favicon-32x32.png" sizes="32x32" />
         <link rel="icon" type="image/png" href="media/favicon-16x16.png" sizes="16x16" />
-
     </head>
     <body>
-        <div class="main">
+        <div id="main">
+            <div id="profile-img"></div> <!--JSX profile image add-->
+            <div id="intro-text"></div> <!--JSX introduction add-->
+
+
             <img class="profile-img" src="media/o.wang.jpg" alt="Owen's Profile Picture">
             
             <h1>Hi there! I'm Owen</h1>
@@ -29,6 +32,7 @@
                     </ul>
                 -->
             </div>
+            <script src="index.js"></script>
         </div>
     </body>
 </html>
